--- a/package.json
+++ b/package.json
@@ -1,32 +1,54 @@
 {
-  "name": "rhino",
-  "version": "0.1.0",
-  "description": "build koa with typescript project",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon server/index.ts",
-    "build": "rm -rf dist && tsc",
-    "serve": "nodemon dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/berwin0415/rhino.git"
-  },
-  "keywords": [
-    "koa",
-    "ts",
-    "typescript"
-  ],
-  "author": "berwin",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/berwin0415/rhino/issues"
-  },
-  "homepage": "https://github.com/berwin0415/rhino#readme",
-  "devDependencies": {
-    "ts-node": "^8.3.0",
-    "typescript": "^3.5.3"
-  },
-  "dependencies": {}
+    "name": "rhino",
+    "version": "0.1.0",
+    "description": "build koa with typescript project",
+    "main": "index.js",
+    "scripts": {
+        "start": "nodemon server/index.ts",
+        "build": "rm -rf dist && tsc",
+        "serve": "nodemon dist/index.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/berwin0415/rhino.git"
+    },
+    "keywords": [
+        "koa",
+        "ts",
+        "typescript"
+    ],
+    "author": "berwin",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/berwin0415/rhino/issues"
+    },
+    "homepage": "https://github.com/berwin0415/rhino#readme",
+    "devDependencies": {
+        "@types/debug": "^4.1.4",
+        "@types/glob": "^7.1.1",
+        "@types/koa": "^2.0.49",
+        "@types/koa-bodyparser": "^4.3.0",
+        "@types/koa-compress": "^2.0.9",
+        "@types/koa-convert": "^1.2.2",
+        "@types/koa-logger": "^3.1.1",
+        "@types/koa-router": "^7.0.42",
+        "@types/koa-static": "^4.0.1",
+        "ts-node": "^8.3.0",
+        "typescript": "^3.5.3"
+    },
+    "dependencies": {
+        "@types/koa-compose": "^3.2.4",
+        "debug": "^4.1.1",
+        "glob": "^7.1.4",
+        "import-dir": "^0.0.1",
+        "koa": "^2.7.0",
+        "koa-bodyparser": "^4.2.1",
+        "koa-compress": "^3.0.0",
+        "koa-convert": "^1.2.0",
+        "koa-logger": "^3.2.1",
+        "koa-onerror": "^4.1.0",
+        "koa-router": "^7.4.0",
+        "koa-static": "^5.0.0"
+    }
 }
