--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     },
     "dependencies": {
         "@types/koa-compose": "^3.2.4",
+        "@types/sequelize": "^4.28.4",
         "debug": "^4.1.1",
         "glob": "^7.1.4",
         "import-dir": "^0.0.1",
@@ -49,6 +50,8 @@
         "koa-logger": "^3.2.1",
         "koa-onerror": "^4.1.0",
         "koa-router": "^7.4.0",
-        "koa-static": "^5.0.0"
+        "koa-static": "^5.0.0",
+        "mysql2": "^1.7.0",
+        "sequelize": "^5.18.4"
     }
 }
