--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "main": "index.js",
     "scripts": {
         "start": "nodemon server/index.ts",
-        "build": "rm -rf dist && tsc",
-        "serve": "nodemon dist/index.js",
+        "serve": "ts-node server/index.ts",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
