--- a/project.config.json
+++ b/project.config.json
@@ -1,70 +1,13 @@
 {
-  "miniprogramRoot": "dist/",
-  "projectname": "bigChestnut",
-  "description": "大板栗！",
+  "miniprogramRoot": "./dist",
+  "projectname": "myApp",
+  "description": "",
   "appid": "wx5e6bfbff8dd71388",
   "setting": {
-    "urlCheck": false,
+    "urlCheck": true,
     "es6": false,
-    "enhance": false,
     "postcss": false,
-    "preloadBackgroundData": false,
-    "minified": false,
-    "newFeature": true,
-    "coverView": true,
-    "nodeModules": false,
-    "autoAudits": false,
-    "showShadowRootInWxmlPanel": false,
-    "scopeDataCheck": false,
-    "uglifyFileName": false,
-    "checkInvalidKey": true,
-    "checkSiteMap": true,
-    "uploadWithSourceMap": true,
-    "compileHotReLoad": false,
-    "babelSetting": {
-      "ignore": [],
-      "disablePlugins": [],
-      "outputPath": ""
-    },
-    "useIsolateContext": true,
-    "useCompilerModule": false,
-    "userConfirmedUseCompilerModuleSwitch": false,
-    "userConfirmedBundleSwitch": false,
-    "packNpmManually": false,
-    "packNpmRelationList": [],
-    "minifyWXSS": true,
-    "useMultiFrameRuntime": false,
-    "useApiHook": true,
-    "bundle": false
+    "minified": false
   },
-  "compileType": "miniprogram",
-  "simulatorType": "wechat",
-  "simulatorPluginLibVersion": {},
-  "condition": {
-    "plugin": {
-      "list": []
-    },
-    "game": {
-      "list": []
-    },
-    "gamePlugin": {
-      "list": []
-    },
-    "miniprogram": {
-      "list": [
-        {
-          "name": "pages/home/index",
-          "pathName": "pages/home/index",
-          "query": "",
-          "scene": 1001
-        },
-        {
-          "name": "pages/mine/index",
-          "pathName": "pages/mine/index",
-          "query": "",
-          "scene": null
-        }
-      ]
-    }
-  }
+  "compileType": "miniprogram"
 }
